--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.0.7",
     "nextjs-progressbar": "^0.0.13",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "webpack": "^5.65.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
